# epub

./: .gitignore  LICENSE  NOTICE-ECDICT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: build-dictionary.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  security.rs
src/db/: bookFiles.ts  localDb.ts  models.ts
src/features/dictionary/: DictionaryService.ts
src/features/reader/: ReaderView.tsx  wordInteraction.ts
src/features/reader/annotations/: annotationStore.ts  renderAnnotations.ts
src/features/reader/cfi/: cfi.ts
src/styles/: app.css
src/types/: epubjs.d.ts
tests/unit/: annotations.test.ts  cfi.test.ts  dictionary.test.ts  localDb.test.ts  renderAnnotations.test.ts  wordInteraction.test.ts
