[package]
name = "glossary"
version = "0.1.0"
description = "Offline EPUB reader with persistent inline Chinese glosses"
authors = ["Glossary contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "glossary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
